# py-chessfessor

./: .coveragerc  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
chessfessor/: __init__.py  __main__.py  chessfessor.py
chessfessor/extractors/: __init__.py  lichess_extractor.py
chessfessor/tests/: test_chessdotcom_extractor.py  test_lichess_extractor.py
src/: chessfessor.py
src/chessfessor/: chessfessor.py
src/chessfessor/chessdotcom_extractor/: chessdotcom_extractor.py  test_chessdotcom_extractor.py
src/lichess_extractor/: test_lichess_extractor.py
