[metadata]
name = chessfessor
version = 1.0.4
author = FrequentlyMissedDeadlines
author_email = FrequentlyMissedDeadlines+chessfessor@gmail.com
description = Extract your chess games data from https://lichess.org and https://chess.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FrequentlyMissedDeadlines/py-chessfessor
project_urls =
    Bug Tracker = https://github.com/FrequentlyMissedDeadlines/py-chessfessor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Topic :: Games/Entertainment :: Board Games
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chessfessor = chessfessor:main